--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "main": "dist/client.js",
   "scripts": {
-    "build": "node bin/build.js && tsc && cd ./src && find . -regextype sed -regex '.*\\.\\(html\\|png\\|svg\\|json\\)' -type f -exec cp --parents {} ../dist \\;"
+    "build": "node bin/build.js && tsc ",
+    "update packages": "node bin/updateCopies.js"
   },
   "license": "MIT",
   "peerDependencies": {
@@ -13,6 +14,7 @@
   "devDependencies": {
     "js-helper": "git+https://github.com/Ainias/js-helper#0.3.2",
     "@types/node": "^12.12.14",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "ncp": "^2.0.0"
   }
 }
